# Naufrage

./: .gitignore  Cargo.toml  Dockerfile  build.rs  install.sh
src/: app_settings.rs  main.rs
src/db/: db_setup.rs  mod.rs
src/db/dose/: dose.rs  mod.rs
src/db/order/: mod.rs  order.rs
src/db/user/: user.rs
src/models/: dose.rs  mod.rs  order.rs  user.rs
src/paypal/: client.rs
src/routes/: admin.rs  dose.rs  mod.rs  order.rs  user.rs
src/tools/: error.rs
static/: package.json  webpack.config.js
static/src/: ProtectedRoute.jsx  index.html  index.jsx
static/src/Components/: Dashboard.jsx
static/src/Routes/: Admin.jsx  CardEntry.jsx  Checkout.jsx  Login.jsx  MainPage.jsx  Register.jsx  Status.jsx  UserProfile.jsx
