[package]
name = "Naufrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-session = "0.6.2"
actix-identity = "0.4.0"
actix-service = "2.0.2"
actix-files = "0.6.0"
actix-rt = "2.7.0"
mongodb = "2.1.0"
bson = { version = "2.1.0", features = ["chrono-0_4"] }
once_cell = "1.7.2"
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["full"] }
serde = "1.0.125"
serde_json = "1.0"
serde_bytes="0.11.5"
reqwest = {version="0.11.2", features = ["json", "stream", "multipart"]}
futures-core = "0.3.13"
async-trait = "0.1.48"
ring="0.16.20"
thiserror="1.0.30"
chrono={version="0.4.19", features = ["serde"]}
log="0.4.16"
env_logger="0.9.0"
config="0.13.1"
base64 = "0.13.0"